Eclipse save-autoformat; minor SonarLint nitpicking (#130)